name:            wai-test
version:         3.0.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Unit test framework (built on HUnit) for WAI applications. (deprecated)
description:     Since WAI 3.0, this code has been merged into wai-extra.
category:        Testing, Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/web-application-interface

library
    build-depends: wai >= 3.0
