Name:                wai
Version:             1.3.0.1
Synopsis:            Web Application Interface.
Description:         Provides a common protocol for communication between web applications and web servers.
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Homepage:            https://github.com/yesodweb/wai
Category:            Web
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           Stable

Source-repository head
    type:            git
    location:        git://github.com/yesodweb/wai.git

Library
  Build-Depends:     base                      >= 4        && < 5
                   , bytestring                >= 0.9.1.4
                   , blaze-builder             >= 0.2.1.4  && < 0.4
                   , conduit                   >= 0.5      && < 0.6
                   , network                   >= 2.2.1.5
                   , http-types                >= 0.7      && < 0.8
                   , text                      >= 0.7      && < 0.12
                   , transformers              >= 0.2.2    && < 0.4
                   , vault                     >= 0.1      && < 0.3
  Exposed-modules:   Network.Wai
  ghc-options:       -Wall
