Cabal-Version:       >=1.10
Name:                wai
Version:             3.2.4
Synopsis:            Web Application Interface.
Description:         Provides a common protocol for communication between web applications and web servers.
                     .
                     API docs and the README are available at <http://www.stackage.org/package/wai>.
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Homepage:            https://github.com/yesodweb/wai
Category:            Web
Build-Type:          Simple
Stability:           Stable
extra-source-files:  README.md ChangeLog.md

Source-repository head
    type:            git
    location:        git://github.com/yesodweb/wai.git

Library
  default-language: Haskell2010
  Build-Depends:     base                      >= 4.12     && < 5
                   , bytestring                >= 0.10.4
                   , network                   >= 2.2.1.5
                   , http-types                >= 0.7
                   , text                      >= 0.7
                   , vault                     >= 0.3      && < 0.4
  Exposed-modules:   Network.Wai
                     Network.Wai.Internal
  ghc-options:       -Wall

test-suite test
    default-language: Haskell2010
    hs-source-dirs: test
    main-is:        Spec.hs
    type:           exitcode-stdio-1.0
    ghc-options:    -threaded -Wall
    cpp-options:    -DTEST
    build-depends:  base >= 4.8 && < 5
                  , wai
                  , hspec
                  , bytestring
    other-modules:  Network.WaiSpec
    build-tool-depends: hspec-discover:hspec-discover

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
