Name:                warp-static
Version:             1.3.0
Synopsis:            Static file server based on Warp and wai-app-static
Homepage:            http://github.com/yesodweb/wai
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
Description:         Serve up static files by running the warp executable. Based on Warp and wai-app-static. 


Executable warp
  Main-is:       warp.hs
  Build-depends: base            >= 4                  && < 5
               , warp            >= 1.3                && < 1.4
               , wai-app-static  >= 1.3                && < 1.4
               , wai-extra       >= 1.3                && < 1.4
               , cmdargs         >= 0.6.7
               , directory       >= 1.0
               , containers      >= 0.2
               , bytestring      >= 0.9.1.4
               , text            >= 0.7                && < 0.12
               , mime-types      >= 0.1                && < 0.2

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
