Name:                warp-static
Version:             2.0.1.1
Synopsis:            Static file server based on Warp and wai-app-static (deprecated)
description:         This executable is now provided by wai-app-static.
Homepage:            http://github.com/yesodweb/wai
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
Description:         Serve up static files by running the warp executable. Based on Warp and wai-app-static. 


Executable warp
  Main-is:       warp.hs
  Build-depends: base            >= 4                  && < 5
               , warp            >= 2.0                && < 2.2
               , wai-app-static  >= 2.0                && < 2.1
               , wai-extra       >= 2.0                && < 2.2
               , cmdargs         >= 0.6.7
               , directory       >= 1.0
               , containers      >= 0.2
               , bytestring      >= 0.9.1.4
               , text            >= 0.7
               , mime-types      >= 0.1                && < 0.2

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
