Name:                warp-tls
Version:             3.1.1
Synopsis:            HTTP over TLS support for Warp via the TLS package
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Homepage:            http://github.com/yesodweb/wai
Category:            Web, Yesod
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           Stable
description:         Support for SSL is now obsoleted.
                     HTTP/2 can be negotiated by ALPN.
                     API docs and the README are available at
                     <http://www.stackage.org/package/warp-tls>.
extra-source-files:  ChangeLog.md README.md

Library
  Build-Depends:     base                          >= 4        && < 5
                   , bytestring                    >= 0.9
                   , wai                           >= 3.0      && < 3.1
                   , warp                          >= 3.1      && < 3.2
                   , data-default-class            >= 0.0.1
                   , tls                           >= 1.2.16
                   , network                       >= 2.2.1
                   , cprng-aes                     >= 0.5.0
                   , streaming-commons
  Exposed-modules:   Network.Wai.Handler.WarpTLS
  ghc-options:       -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
