Name:                warp-tls
Version:             3.2.4
Synopsis:            HTTP over TLS support for Warp via the TLS package
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Homepage:            http://github.com/yesodweb/wai
Category:            Web, Yesod
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           Stable
description:         SSLv1 and SSLv2 are obsoleted by IETF.
                     We should use TLS 1.2 (or TLS 1.1 or TLS 1.0 if necessary).
                     HTTP/2 can be negotiated by ALPN.
                     API docs and the README are available at
                     <http://www.stackage.org/package/warp-tls>.
extra-source-files:  ChangeLog.md README.md

Library
  Build-Depends:     base                          >= 4        && < 5
                   , bytestring                    >= 0.9
                   , wai                           >= 3.2      && < 3.3
                   , warp                          >= 3.2.10   && < 3.3
                   , data-default-class            >= 0.0.1
                   , tls                           >= 1.3.10
                   , cryptonite                    >= 0.12
                   , network                       >= 2.2.1
                   , streaming-commons
                   , tls-session-manager
  Exposed-modules:   Network.Wai.Handler.WarpTLS
  ghc-options:       -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
