Name:                warp-tls
Version:             3.3.3
Synopsis:            HTTP over TLS support for Warp via the TLS package
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Homepage:            http://github.com/yesodweb/wai
Category:            Web, Yesod
Build-Type:          Simple
Cabal-Version:       >= 1.10
Stability:           Stable
description:         SSLv1 and SSLv2 are obsoleted by IETF.
                     We should use TLS 1.2 (or TLS 1.1 or TLS 1.0 if necessary).
                     HTTP/2 can be negotiated by ALPN.
                     API docs and the README are available at
                     <http://www.stackage.org/package/warp-tls>.
extra-source-files:  ChangeLog.md README.md

Library
  Build-Depends:     base                          >= 4.12     && < 5
                   , bytestring                    >= 0.9
                   , wai                           >= 3.2      && < 3.3
                   , warp                          >= 3.3.22   && < 3.4
                   , data-default-class            >= 0.0.1
                   , tls                           >= 1.5.3
                   , cryptonite                    >= 0.12
                   , network                       >= 2.2.1
                   , streaming-commons
                   , tls-session-manager           >= 0.0.4
                   , unliftio
  Exposed-modules:   Network.Wai.Handler.WarpTLS, Network.Wai.Handler.WarpTLS.Internal
  ghc-options:       -Wall
  if os(windows)
      Cpp-Options:   -DWINDOWS
  if impl(ghc >= 8)
      Default-Extensions:  Strict StrictData
  Default-Language:     Haskell2010


source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
