Name:                warp
Version:             3.1.6
Synopsis:            A fast, light-weight web server for WAI applications.
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman, Kazu Yamamoto, Matt Brown
Maintainer:          michael@snoyman.com
Homepage:            http://github.com/yesodweb/wai
Category:            Web, Yesod
Build-Type:          Simple
Cabal-Version:       >=1.8
Stability:           Stable
description:         HTTP\/1.0, HTTP\/1.1 and HTTP\/2 are supported.
                     For HTTP\/2,  Warp supports direct and ALPN (in TLS)
                     but not upgrade.
                     API docs and the README are available at
                     <http://www.stackage.org/package/warp>.
extra-source-files:  attic/hex
                     ChangeLog.md
                     README.md

Flag network-bytestring
    Default: False

Flag allow-sendfilefd
    Description: Allow use of sendfileFd (not available on GNU/kFreeBSD)
    Default:     True

Flag warp-debug
    Description: print debug output. not suitable for production
    Default:     False

Library
  Build-Depends:     base                      >= 3        && < 5
                   , array
                   , auto-update               >= 0.1.1    && < 0.2
                   , blaze-builder             >= 0.4
                   , bytestring                >= 0.9.1.4
                   , bytestring-builder
                   , case-insensitive          >= 0.2
                   , containers
                   , ghc-prim
                   , http-types                >= 0.8.5
                   , iproute                   >= 1.3.1
                   , http2                     >= 1.1
                   , simple-sendfile           >= 0.2.7    && < 0.3
                   , unix-compat               >= 0.2
                   , wai                       >= 3.0.4    && < 3.1
                   , text
                   , streaming-commons         >= 0.1.10
                   , vault                     >= 0.3
                   , stm                       >= 2.3
                   , word8
                   , hashable
  if flag(network-bytestring)
      Build-Depends: network                   >= 2.2.1.5  && < 2.2.3
                   , network-bytestring        >= 0.1.3    && < 0.1.4
  else
      Build-Depends: network               >= 2.3
  Exposed-modules:   Network.Wai.Handler.Warp
                     Network.Wai.Handler.Warp.Internal
  Other-modules:     Network.Wai.Handler.Warp.Buffer
                     Network.Wai.Handler.Warp.Conduit
                     Network.Wai.Handler.Warp.Counter
                     Network.Wai.Handler.Warp.Date
                     Network.Wai.Handler.Warp.FdCache
                     Network.Wai.Handler.Warp.HTTP2
                     Network.Wai.Handler.Warp.HTTP2.EncodeFrame
                     Network.Wai.Handler.Warp.HTTP2.HPACK
                     Network.Wai.Handler.Warp.HTTP2.Manager
                     Network.Wai.Handler.Warp.HTTP2.Receiver
                     Network.Wai.Handler.Warp.HTTP2.Request
                     Network.Wai.Handler.Warp.HTTP2.Sender
                     Network.Wai.Handler.Warp.HTTP2.Types
                     Network.Wai.Handler.Warp.HTTP2.Worker
                     Network.Wai.Handler.Warp.Header
                     Network.Wai.Handler.Warp.IO
                     Network.Wai.Handler.Warp.IORef
                     Network.Wai.Handler.Warp.ReadInt
                     Network.Wai.Handler.Warp.Recv
                     Network.Wai.Handler.Warp.Request
                     Network.Wai.Handler.Warp.RequestHeader
                     Network.Wai.Handler.Warp.Response
                     Network.Wai.Handler.Warp.ResponseHeader
                     Network.Wai.Handler.Warp.Run
                     Network.Wai.Handler.Warp.SendFile
                     Network.Wai.Handler.Warp.Settings
                     Network.Wai.Handler.Warp.Timeout
                     Network.Wai.Handler.Warp.Types
                     Network.Wai.Handler.Warp.Windows
                     Paths_warp
  Ghc-Options:       -Wall

  if flag(warp-debug)
      Cpp-Options:   -DWARP_DEBUG
  if (os(linux) || os(freebsd) || os(darwin)) && flag(allow-sendfilefd)
      Cpp-Options:   -DSENDFILEFD
  if os(windows)
      Cpp-Options:   -DWINDOWS
      Build-Depends: time
                   , old-locale
  else
      Build-Depends: unix
                   , http-date
      Other-modules: Network.Wai.Handler.Warp.MultiMap

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  HS-Source-Dirs:       test
  Ghc-Options:          -threaded -Wall
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest >= 0.10.1

Test-Suite spec
    Main-Is:         Spec.hs
    Other-modules:   BufferPoolSpec
                     ConduitSpec
                     ExceptionSpec
                     FdCacheSpec
                     MultiMapSpec
                     ReadIntSpec
                     RequestSpec
                     ResponseHeaderSpec
                     ResponseSpec
                     RunSpec
                     SendFileSpec
                     HTTP
    Hs-Source-Dirs:  test, .
    Type:            exitcode-stdio-1.0

    Ghc-Options:     -Wall
    Build-Depends:   base >= 4 && < 5
                   , array
                   , auto-update
                   , blaze-builder             >= 0.4
                   , bytestring                >= 0.9.1.4
                   , bytestring-builder
                   , case-insensitive          >= 0.2
                   , ghc-prim
                   , HTTP
                   , http-types                >= 0.8.5
                   , iproute                   >= 1.3.1
                   , lifted-base               >= 0.1
                   , simple-sendfile           >= 0.2.4    && < 0.3
                   , transformers              >= 0.2.2
                   , unix-compat               >= 0.2
                   , wai                       >= 3.0.4    && < 3.1
                   , network
                   , HUnit
                   , QuickCheck
                   , hspec                     >= 1.3
                   , time
                   , old-locale
                   , text
                   , streaming-commons         >= 0.1.10
                   , async
                   , vault
                   , stm                       >= 2.3
                   , directory
                   , process
                   , containers
                   , http2                     >= 1.1
                   , word8
                   , hashable

  if (os(linux) || os(freebsd) || os(darwin)) && flag(allow-sendfilefd)
    Cpp-Options:   -DSENDFILEFD
    Build-Depends: unix
                 , http-date
  if os(windows)
      Cpp-Options:   -DWINDOWS

Benchmark parser
    Type:           exitcode-stdio-1.0
    Main-Is:        Parser.hs
    HS-Source-Dirs: bench .
    Build-Depends:  base
                  , bytestring
                  , criterion
                  , http-types
                  , network
                  , network

Source-Repository head
  Type:     git
  Location: git://github.com/yesodweb/wai.git
